Fix parsing empty data fields https://github.com/bleything/plist/pull/18

--- a/test/assets/test_data_elements.plist
+++ b/test/assets/test_data_elements.plist
@@ -20,5 +20,7 @@
     <data>BAhvOhZNYXJzaGFsYWJsZU9iamVjdAY6CUBmb28iHnRoaXMgb2JqZWN0IHdh
     cyBtYXJzaGFsZWQ=
     </data>
+    <key>nodata</key>
+    <data/>
   </dict>
 </plist>
